cloudwatch-logging.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-observability
  labels:
    aws-observability: "enabled"
