n8n-worker-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n-worker
  name: n8n-worker
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n-worker
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n worker
          image: n8nio/n8n
          name: n8n-worker
          ports:
            - containerPort: 5678
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
